# nilaway

./: .codecov.yaml  .coderabbit.yaml  .gitignore  .golangci.version  .golangci.yaml  .pre-commit-hooks.yaml  .tool-version  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  WORKSPACE  go.mod  go.sum  nilaway.go  nilaway_go122_plus_test.go  nilaway_go123_plus_test.go  nilaway_test.go  rich effect function check  test.go
.github/workflows/: ci.yml  go.yml  golden-test-build.yml  golden-test-comment.yml  golden-test-no-grouping.yml  golden-test-run.yml  golden-test.yml
accumulation/: BUILD.bazel  analyzer.go
annotation/: BUILD.bazel  affiliation.go  analyzer.go  analyzer_test.go  consume_trigger.go  consume_trigger_test.go  copy_test.go  doc.go  equals_test.go  full_trigger.go  helper_test.go  key.go  key_test.go  map.go  produce_trigger.go  produce_trigger_test.go  structinitv2.go  trigger.go  util.go  util_test.go
assertion/: BUILD.bazel  analyzer.go  analyzer_test.go
assertion/affiliation/: BUILD.bazel  affiliation.go  analyzer.go  analyzer_test.go
assertion/anonymousfunc/: BUILD.bazel  analyzer.go  analyzer_test.go  closure.go
assertion/anonymousfunc/testdata/src/go.uber.org/anonymousfunc/: simple.go
assertion/function/: BUILD.bazel  analyzer.go  analyzer_test.go
assertion/function/assertiontree/: BUILD.bazel  assertion_node.go  backprop.go  backprop_util.go  contract.go  fld_assertion_node.go  func_assertion_node.go  function_context.go  index_assertion_node.go  nilcheck.go  parse_expr_producer.go  preprocess_blocks.go  rich_check_effect.go  root_assertion_node.go  structinit_util.go  structinitv2.go  structinitv2_test.go  trusted_func.go  util.go  var_assertion_node.go
assertion/function/functioncontracts/: BUILD.bazel  analyzer.go  analyzer_test.go  contract.go  function_contracts_map.go  infer.go  parse.go
assertion/function/functioncontracts/testdata/src/go.uber.org/factexport/downstream/: downstream.go
assertion/function/functioncontracts/testdata/src/go.uber.org/factexport/upstream/: upstream.go
assertion/function/functioncontracts/testdata/src/go.uber.org/functioncontracts/: main.go
assertion/function/functioncontracts/testdata/src/go.uber.org/functioncontracts/infer/: external.go  main.go
assertion/function/functioncontracts/testdata/src/go.uber.org/functioncontracts/parse/: main.go
assertion/function/functioncontracts/testdata/src/go.uber.org/infer/: main.go
assertion/function/preprocess/: cfg.go  cfg_test.go  preprocessor.go  templ.go
assertion/function/producer/: BUILD.bazel  deep_parsed_producer.go  parsed_producer.go  shallow_parsed_producer.go
assertion/function/structfieldeffects/: analyzer.go  effects.go  effects_test.go  fact.go  fact_test.go
assertion/function/structfieldeffects/testdata/src/go.uber.org/paramfieldeffects/: main.go
assertion/function/structfieldeffects/testdata/src/go.uber.org/paramfieldeffects/factexport/downstream/: downstream.go
assertion/function/structfieldeffects/testdata/src/go.uber.org/paramfieldeffects/factexport/upstream/: upstream.go
assertion/function/structfieldeffects/testdata/src/go.uber.org/returneffects/: main.go
assertion/function/testdata/src/go.uber.org/backprop/: fixpoint.go
assertion/function/testdata/src/go.uber.org/funcsizelimit/: largefunc.go
assertion/function/testdata/src/go.uber.org/pkg/: main.go
assertion/function/trustedfunc/: cfg.go  trustedfunc.go
assertion/global/: BUILD.bazel  analyzer.go  analyzer_test.go  globalvarinit.go
assertion/structfield/: BUILD.bazel  analyzer.go  analyzer_test.go  field_context.go
cmd/gclplugin/: gclplugin.go  gclplugin_test.go
cmd/nilaway/: BUILD.bazel  main.go
config/: BUILD.bazel  config.go  const.go
diagnostic/: BUILD.bazel  conflict.go  engine.go  nilflow.go  nolint.go
docs/: Configurations.md  Developing.md  community-maintained-projects.md  configurations.md  developing.md  index.md
guard/: guard.go
hook/: assume_global_var.go  assume_return.go  error_return.go  hook.go  no_return_call.go  replace_conditional.go  split_blocks_on.go  terminating_call.go
inference/: BUILD.bazel  conflict.go  engine.go  explained_bool.go  inferred_map.go  inferred_map_test.go  inferred_value.go  mode.go  primitive.go
nilawaytest/: testhelper.go
testdata/integration/: .custom-gcl.template.yaml  .golangci.yaml  .golangci.yml  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-integration  bazel-out  bazel-testlogs  go.mod  go.sum  nogo.patch
testdata/integration/contracts/downstream/: BUILD.bazel  downstream.go
testdata/integration/contracts/upstream/: BUILD.bazel  upstream.go
testdata/integration/downstream/: main.go
testdata/integration/simple/downstream/: BUILD.bazel  downstream.go  nolint.go
testdata/integration/simple/upstream/: BUILD.bazel  nolint.go  upstream.go
testdata/integration/templ/: hello_world.templ  hello_world_templ.go  main.go
testdata/integration/templ-example/: hello_world.templ  hello_world_templ.go  main.go
testdata/integration/upstream/: main.go
testdata/src/go.uber.org/abnormalflow/: abnormalflow.go
testdata/src/go.uber.org/annotationparse/: annotationparse.go
testdata/src/go.uber.org/anonymousfunction/: anonymous_functions_assignment.go  argument_passing_explicitly.go  (+3 more)
testdata/src/ignoredpkg1/: main.go
testdata/src/ignoredpkg2/: main.go
testdata/src/prettyprint/: main.go
testdata/src/printfullfilepath/: main.go
tools/: go.mod  go.sum
tools/cmd/golden-test/: BUILD.bazel  main.go  main_test.go
tools/cmd/integration-test/: BUILD.bazel  golangci_lint.go  main.go  main_test.go  standalone.go
tools/cmd/sanity-check/: main.go  main_test.go
util/: BUILD.bazel  guard_nonce.go  util.go
util/analysishelper/: BUILD.bazel  analyzer.go  analyzer_test.go  pass.go  pass_test.go
util/asthelper/: BUILD.bazel  asthelper.go  asthelper_test.go
util/orderedmap/: BUILD.bazel  orderedmap.go  orderedmap_test.go
util/testhelper/: testhelper.go
util/tokenhelper/: tokenhelper.go  tokenhelper_test.go
util/typeshelper/: typeshelper.go  typeshelper_test.go
(+200 files in other folders)
