load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "assertion",
    srcs = ["analyzer.go"],
    importpath = "go.uber.org/nilaway/assertion",
    visibility = ["//visibility:public"],
    deps = [
        "//annotation",
        "//assertion/affiliation",
        "//assertion/function",
        "//assertion/global",
        "//config",
        "//util/analysishelper",
        "@org_golang_x_tools//go/analysis:go_default_library",
    ],
)

go_test(
    name = "assertion_test",
    srcs = ["analyzer_test.go"],
    embed = [":assertion"],
    deps = [
        "//annotation",
        "//util/analysishelper",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
