load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "const.go",
    ],
    importpath = "go.uber.org/nilaway/config",
    visibility = ["//visibility:public"],
    deps = [
        "//util/asthelper",
        "@org_golang_x_tools//go/analysis:go_default_library",
    ],
)
