load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "global",
    srcs = [
        "analyzer.go",
        "globalvarinit.go",
    ],
    importpath = "go.uber.org/nilaway/assertion/global",
    visibility = ["//visibility:public"],
    deps = [
        "//annotation",
        "//config",
        "//util",
        "//util/analysishelper",
        "@org_golang_x_tools//go/analysis:go_default_library",
    ],
)

go_test(
    name = "global_test",
    srcs = ["analyzer_test.go"],
    embed = [":global"],
    deps = [
        "//annotation",
        "//util/analysishelper",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
