load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "structfield",
    srcs = [
        "analyzer.go",
        "field_context.go",
    ],
    importpath = "go.uber.org/nilaway/assertion/structfield",
    visibility = ["//visibility:public"],
    deps = [
        "//annotation",
        "//config",
        "//util/analysishelper",
        "@org_golang_x_tools//go/analysis:go_default_library",
    ],
)

go_test(
    name = "structfield_test",
    srcs = ["analyzer_test.go"],
    embed = [":structfield"],
    deps = [
        "//util/analysishelper",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
