load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nilaway_lib",
    srcs = ["main.go"],
    importpath = "go.uber.org/nilaway/cmd/nilaway",
    visibility = ["//visibility:private"],
    deps = [
        "//:nilaway",
        "//config",
        "@org_golang_x_tools//go/analysis:go_default_library",
        "@org_golang_x_tools//go/analysis/singlechecker:go_default_library",
    ],
)

go_binary(
    name = "nilaway",
    embed = [":nilaway_lib"],
    visibility = ["//visibility:public"],
)
