load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "analysishelper",
    srcs = ["analyzer.go"],
    importpath = "go.uber.org/nilaway/util/analysishelper",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis:go_default_library"],
)

go_test(
    name = "analysishelper_test",
    srcs = ["analyzer_test.go"],
    embed = [":analysishelper"],
    deps = [
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_x_tools//go/analysis:go_default_library",
    ],
)
