load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "asthelper",
    srcs = ["asthelper.go"],
    importpath = "go.uber.org/nilaway/util/asthelper",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis:go_default_library"],
)

go_test(
    name = "asthelper_test",
    srcs = ["asthelper_test.go"],
    embed = [":asthelper"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
